--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Profile | ProxyStrike</title>
+    <title>Home | Proxy Strike</title>
     <meta charset="UTF-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -81,19 +81,16 @@
                 <li class="nav-item">
                   <a class="nav-link" href="support.html">Support</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="dashboard.html">Dashboard</a>
-                </li>
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html">Login</a>
+                  <a class="nav-link" href="login.html" id = "lnkLogin">Login</a>
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="register.html"
                     style="color: #00baff;"
+                    id = "lnkSignup"
                     >Sign Up</a
                   >
                 </li>
@@ -109,10 +106,8 @@
             <div class="col-md-6">
               <h1>Proxy<span>Strike</span></h1>
               <h4>A Quick & Easy Proxy For You.</h4>
-              <p class="mt-5 mb-5">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut labore et dolore.
-              </p>
+              <p class="mt-5 mb-5">Proxy Strike is here to offer the fastest and most reliable services in the business.</p>
+           
               <div>
                 <a href="#" class="btn-small">Try Proxy</a>
                 <a href="plan.html" class="btn-small-light">View Plans</a>
@@ -185,8 +180,13 @@
     </div>
 
     <!--====== Javascripts & Jquery ======-->
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script>
+        indLoad();
+    </script>
   </body>
 </html>
