--- a/login.html
+++ b/login.html
@@ -112,5 +112,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/app.js"></script>
+    <script>
+      hideLoader()
+    </script>
   </body>
 </html>
