--- a/register.html
+++ b/register.html
@@ -123,8 +123,13 @@
     </div>
 
     <!--====== Javascripts & Jquery ======-->
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
+    <script>
+        hideLoader()
+      </script>
   </body>
 </html>
