--- a/storage-plan.html
+++ b/storage-plan.html
@@ -44,7 +44,7 @@
     <div class="container">
       <!-- Header section -->
       <header class="mt-5">
-        <div class="row">
+        <div class="row" >
           <div class="col-sm-4">
             <a href="index.html">
               <img src="img/logo.png" alt="" class="logo" />
@@ -193,14 +193,14 @@
 
       <!-- data usage section -->
       <section id="data-usage">
-        <div class="row">
+        <div class="row" id = "meter">
           <div class="col-lg-3 col-md-2 col-mb">
             <p class="mb-1"><small>Data Used</small></p>
-            <h1>8.210 <span class="text-sm">GB</span></h1>
+            <h1 id = "amt">8.210 <span class="text-sm">GB</span></h1>
           </div>
           <div class="col-lg-6 col-md-8 col-mb">
             <div class="row dot-progress">
-              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <!-- <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
               <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
               <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
               <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
@@ -211,12 +211,12 @@
               <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
               <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
               <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
-              <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-gray"></i></div> -->
             </div>
           </div>
           <div class="col-lg-3 col-md-2 col-mb text-right">
             <p class="mb-1"><small>Current Plan</small></p>
-            <h1 class="text-blue"><span class="text-sm">GB</span> 10.000</h1>
+            <h1 class="text-blue" id = "capacity"><span class="text-sm">GB</span> 10.000</h1>
           </div>
         </div>
       </section>
@@ -240,7 +240,11 @@
     <script src="js/main.js"></script>
     <script src="js/app.js"></script>
     <script>
-    loadStock()</script>
+      storagePageLoaded();
+
+   
+  
+    </script>
 
   </body>
 </html>
