--- a/support.html
+++ b/support.html
@@ -156,5 +156,12 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
+    <script src="js/app.js"></script>
+
+    <script>   
+     hideLoader()
+      </script>
   </body>
 </html>
