--- a/support.html
+++ b/support.html
@@ -137,7 +137,7 @@
 
         <!-- connect section -->
         <section class="text-center mt-5 mb-5">
-          <a href="#" class="btn-very-large">PLEASE CONNECT IN OUR DISCORD</a>
+          <a href="https://discord.gg/NzhUvy" class="btn-very-large">PLEASE CONNECT IN OUR DISCORD</a>
         </section>
         <!-- end of connect section -->
 
