--- a/plan.html
+++ b/plan.html
@@ -1,289 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Pricing Plans | ProxyStrike</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+<head>
+  <title>Pricing Plans | ProxyStrike</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Favicon -->
+  <link href="img/favicon.ico" rel="shortcut icon" />
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
+  <!-- Google font -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
+    rel="stylesheet" />
 
-    <!-- Main Stylesheets -->
-    <link rel="stylesheet" href="css/style.css" />
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/all.min.css" />
 
-    <!--[if lt IE 9]>
+  <!-- Main Stylesheets -->
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <style>
-      body {
-        background: #001229 url("img/bg_star_galaxy.png") no-repeat;
-        color: #f1f1f1;
-      }
-      .bg-shade {
-        min-height: 100%;
-        min-width: 100%;
-        background: rgba(0, 18, 41, 0.9);
-        padding-top: 20px;
-        padding-bottom: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Page Preloder -->
-    <div id="preloder">
-      <div class="loader"></div>
-    </div>
-    <div class="bg-shade">
-      <div class="container">
-        <!-- Header section -->
-        <header id="navbar-main">
-          <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">
-              <img src="img/logo.png" alt="" class="logo" />
-              <span class="logo-proxy">Proxy</span>
-              <span class="logo-strike">Strike</span>
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+  <style>
+    body {
+      background: #001229 url("img/bg_star_galaxy.png") no-repeat;
+      color: #f1f1f1;
+    }
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="plan.html"
-                    >Plans <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="support.html">Support</a>
-                </li>
-              </ul>
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="login.html" id = "lnkLogin">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    style="color: #00baff;"
-                    id = "lnkSignup"
-                    >Sign Up</a
-                  >
-                </li>
-              </ul>
+    .bg-shade {
+      min-height: 100%;
+      min-width: 100%;
+      background: rgba(0, 18, 41, 0.9);
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Page Preloder -->
+  <div id="preloder">
+    <div class="loader"></div>
+  </div>
+  <div class="bg-shade">
+    <div class="container">
+      <!-- Header section -->
+      <header id="navbar-main">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="" class="logo" />
+            <span class="logo-proxy">Proxy</span>
+            <span class="logo-strike">Strike</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="plan.html">Plans <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="support.html">Support</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="login.html" id="lnkLogin">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #00baff;" id="lnkSignup">Sign Up</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <!-- end of Header section -->
+
+      <!-- intro section -->
+      <section id="intro-main" class="text-center">
+        <h3>Choose Any Monthly Plan!</h3>
+      </section>
+      <!-- end of intro section -->
+
+      <!-- pricing section -->
+      <section id="storage-pricing">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="pricing-card-transparent">
+              <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
+              <h5 class="mt-2">STARTER</h5>
+              <hr />
+              <p id="quantity1">2 GB Included<br><span id="per1">$16.00 per GB</span></p>
+              <h1 class="mb-1 mt-4" id="price1">$1000</h1>
+              <p class="mb-4">
+              </p>
+              <button class="pricing-button-transparent card-hide purchaseButton" data-toggle="modal"
+                data-target="#purchaseModal" id="1">
+                Purchase
+              </button>
             </div>
-          </nav>
-        </header>
-        <!-- end of Header section -->
-
-        <!-- intro section -->
-        <section id="intro-main" class="text-center">
-          <h3>Choose Any Monthly Plan!</h3>
-        </section>
-        <!-- end of intro section -->
-
-        <!-- pricing section -->
-        <section id="storage-pricing">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="pricing-card-transparent">
-                <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
-                <h5 class="mt-2">STARTER</h5>
-                <hr />
-                <p id="quantity1">2 GB Included<br><span id = "per1">$16.00 per GB</span></p>
-                <h1 class="mb-1 mt-4" id="price1">$1000</h1>
-                <p class="mb-4">
+          </div>
+          <div class="col-md-4">
+            <div class="pricing-card-transparent pricing-card-current-transparent">
+              <p class="mb-4"><small class="text-blue">MOST POPULAR</small></p>
+              <h5 class="mt-2">GROWTH</h5>
+              <hr />
+              <p id="quantity2">5 GB Included<br><span id="per2">$13.60 per GB</span></p>
+              <h1 class="mb-1 mt-4" id="price2">$1000</h1>
+              <p class="mb-4">
+              </p>
+              <button class="pricing-button pricing-button-current card-hide purchaseButton" data-toggle="modal" id="2"
+                data-target="#purchaseModal">
+                Purchase
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="pricing-card-transparent">
+              <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
+              <h5 class="mt-2">PRO</h5>
+              <hr />
+              <p id="quantity3">10 GB Included<br><span id="per3">$12.20 per GB</span></p>
+              <h1 class="mb-1 mt-4" id="price3">$1000</h1>
+              <p class="mb-4">
+              </p>
+              <button class="pricing-button-transparent card-hide purchaseButton" id="3" data-toggle="modal"
+                data-target="#purchaseModal">
+                Purchase
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- modal for confirming the purchase -->
+        <div class="modal fade" id="purchaseModal" tabindex="-1" role="dialog" aria-labelledby="confirmbody"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title text-left" id="confirmbody">
+                  Are you sure you want to purchase
+                  <span id="quantity">5</span> gigabytes for
+                  <span id="price">$68</span>?
+                </h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p id="cardonfile">
+                  Your card ending in
+                  <span id="last4" class="text-warning">1234</span> will be
+                  charged the full amount.
                 </p>
-                <button
-                  class="pricing-button-transparent card-hide purchaseButton"
-                  data-toggle="modal"
-                  data-target="#purchaseModal"
-                  id = "1"
-                >
+                <button id="addCard" class="pricing-button">
+                  Add new card
+                </button>
+                <!-- card-element section -->
+                <div id="card-element" class="mt-3"></div>
+                <!-- end of card-element section -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-dark" data-dismiss="modal">
+                  Cancel
+                </button>
+                <button type="button" class="btn btn-outline-success" id="submitOrder">
                   Purchase
                 </button>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div
-                class="pricing-card-transparent pricing-card-current-transparent"
-              >
-                <p class="mb-4"><small class="text-blue">MOST POPULAR</small></p>
-                <h5 class="mt-2">GROWTH</h5>
-                <hr />
-                <p id="quantity2">5 GB Included<br><span id = "per2">$13.60 per GB</span></p>
-                <h1 class="mb-1 mt-4" id="price2">$1000</h1>
-                <p class="mb-4">
-                </p>
-                <button
-                  class="pricing-button pricing-button-current card-hide purchaseButton"
-                  data-toggle="modal"
-                  id = "2"
-                  data-target="#purchaseModal"
-                >
-                  Purchase
-                </button>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="pricing-card-transparent">
-                <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
-                <h5 class="mt-2">PRO</h5>
-                <hr />
-                <p id="quantity3">10 GB Included<br><span id = "per3">$12.20 per GB</span></p>
-                <h1 class="mb-1 mt-4" id="price3">$1000</h1>
-                <p class="mb-4">
-                  </p>
-                <button
-                  class="pricing-button-transparent card-hide purchaseButton"
-                  id = "3"
-                  data-toggle="modal"
-                  data-target="#purchaseModal"
-                >
-                  Purchase
-                </button>
-              </div>
-            </div>
-          </div>
-          <!-- modal for confirming the purchase -->
-          <div
-            class="modal fade"
-            id="purchaseModal"
-            tabindex="-1"
-            role="dialog"
-            aria-labelledby="confirmbody"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h4 class="modal-title text-left" id="confirmbody">
-                    Are you sure you want to purchase
-                    <span id = "quantity" >5</span> gigabytes for
-                    <span id = "price" >$68</span>?
-                  </h4>
-                  <button
-                    type="button"
-                    class="close"
-                    data-dismiss="modal"
-                    aria-label="Close"
-                  >
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <p id="cardonfile">
-                    Your card ending in
-                    <span id="last4" class="text-warning">1234</span> will be
-                    charged the full amount.
-                  </p>
-                  <button id="addCard" class="pricing-button">
-                    Add new card
-                  </button>
-                  <!-- card-element section -->
-                  <div id="card-element" class="mt-3"></div>
-                  <!-- end of card-element section -->
-                </div>
-                <div class="modal-footer">
-                  <button
-                    type="button"
-                    class="btn btn-outline-dark"
-                    data-dismiss="modal"
-                  >
-                    Cancel
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-outline-success"
-                    id="submitOrder"
-                  >
-                    Purchase
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- end of modal for confirming the purchase-->
-        </section>
-        <!-- end of pricing section -->
 
-        <!-- plans includes section -->
-        <section id="plans-includes">
-          <p class="text-center">ALL PLANS INCLUDES</p>
-          <hr />
-          <div class="row">
-            <div class="col-md-4">
-              <ul>
-                <li>Full Gigabytes Usage</li>
-                <li>Intelligent IPs</li>
-                <li>No Setup Fees</li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <ul>
-                <li>User Pass Authenticated</li>
-                <li>30 Day Expiration Date</li>
-                <li>Full Dedicated</li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <ul>
-                <li>500 Proxies in Other Regions/Countries</li>
-                <li>Sticky IP Generation Support</li>
-                <li>100% Real Residential IPs</li>
-              </ul>
+              </div>
+              <p id="payment-status">
+                Payment Successful
+              </p>
             </div>
           </div>
-        </section>
-        <!-- end of plans includes section -->
+        </div>
+        <!-- end of modal for confirming the purchase-->
+      </section>
+      <!-- end of pricing section -->
 
-        <!-- footer section -->
-        <section id="footer">
-          <p class="copyright mt-4">
-            <i class="far fa-copyright"></i> 2019 Proxy Strike. All rights
-            resereved.
-          </p>
-        </section>
-        <!-- end of footer section -->
-      </div>
+      <!-- plans includes section -->
+      <section id="plans-includes">
+        <p class="text-center">ALL PLANS INCLUDES</p>
+        <hr />
+        <div class="row">
+          <div class="col-md-4">
+            <ul>
+              <li>Full Gigabytes Usage</li>
+              <li>Intelligent IPs</li>
+              <li>No Setup Fees</li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul>
+              <li>User Pass Authenticated</li>
+              <li>30 Day Expiration Date</li>
+              <li>Full Dedicated</li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul>
+              <li>500 Proxies in Other Regions/Countries</li>
+              <li>Sticky IP Generation Support</li>
+              <li>100% Real Residential IPs</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- end of plans includes section -->
+
+      <!-- footer section -->
+      <section id="footer">
+        <p class="copyright mt-4">
+          <i class="far fa-copyright"></i> 2019 Proxy Strike. All rights
+          resereved.
+        </p>
+      </section>
+      <!-- end of footer section -->
     </div>
+  </div>
 
-    <!--====== Javascripts & Jquery ======-->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://checkout.stripe.com/checkout.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/app.js"></script>
-    <script>
-            loadStock();
-     </script>
+  <!--====== Javascripts & Jquery ======-->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
+  <script>
+    loadStock();
+  </script>
 
- 
-  </body>
+
+</body>
+
 </html>
