--- a/register.html
+++ b/register.html
@@ -65,6 +65,7 @@
                     class="form-control"
                     placeholder="First Name"
                     name="first_name"
+                    id="firstname-register"
                   />
                 </div>
                 <div class="form-group">
@@ -73,6 +74,7 @@
                     class="form-control"
                     placeholder="Last Name"
                     name="last_name"
+                    id="lastname-register"
                   />
                 </div>
                 <div class="form-group">
@@ -81,6 +83,7 @@
                     class="form-control"
                     placeholder="Email"
                     name="email"
+                    id="email-register"
                   />
                 </div>
                 <div class="form-group">
@@ -89,6 +92,7 @@
                     class="form-control"
                     placeholder="Password"
                     name="password"
+                    id="password-register"
                   />
                 </div>
                 <div class="form-group">
@@ -97,10 +101,19 @@
                     class="form-control"
                     placeholder="Confirm Password"
                     name="confirm_password"
+                    id="password-confirm-register"
                   />
                 </div>
-                <button class="w-100 btn-big mt-4">Register</button>
+                <div id="card-element" class="mt-3"></div>
+                <!-- end of card-element section -->
+             
+                <button class="w-100 btn-big mt-4" id = "register-submit">Register</button>
               </form>
+              <p><div id="card-errors" class="validation-error" role="alert"></div></p>
+              <div class="errorMessage">
+                  <span style="color: white" id = "error-message-text-register"></span>
+              </div>
+
               <p id="signup-here" class="mt-3" style="font-size: 14px;">
                 Already a member to <span class="logo-proxy">Proxy</span
                 ><span class="logo-strike">Strike</span>?
@@ -130,6 +143,7 @@
     <script src="js/app.js"></script>
     <script>
         hideLoader()
+        configureStripeBox()
       </script>
   </body>
 </html>
