--- a/dashboard.html
+++ b/dashboard.html
@@ -108,10 +108,139 @@
               <button class="w-100 btn-big-100 mt-4">Generate</button>
             </form>
             <a
-              href="storage-plan.html"
+              href="Javascript.void(0)"
               class="mt-5 d-block btn-big-100 text-center"
+              data-toggle="modal"
+              data-target="#storageModal"
               >Upgrade Storage</a
             >
+
+            <!-- Modal for the storage plan -->
+            <div class="modal" tabindex="-1" role="dialog" id="storageModal">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Choose a Storage Plan</h5>
+                    <button
+                      type="button"
+                      class="close"
+                      data-dismiss="modal"
+                      aria-label="Close"
+                    >
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="container-fluid text-center">
+                      <!-- pricing section -->
+                      <div class="row">
+                        <div class="col-md-4">
+                          <div class="pricing-card">
+                            <p class="mt-2">STARTER</p>
+                            <hr />
+                            <p><small>25 GB / year</small></p>
+                            <h3 class="mb-1 mt-4">$250</h3>
+                            <p class="mb-4"><small>Billed Annually</small></p>
+                            <button class="pricing-button">Upgrade</button>
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="pricing-card pricing-card-current">
+                            <p class="mt-2">GROWTH</p>
+                            <hr />
+                            <p><small>50 GB</small></p>
+                            <h3 class="mb-1 mt-4">$435</h3>
+                            <p class="mb-4"><small>Billed Annually</small></p>
+                            <button
+                              class="pricing-button pricing-button-current"
+                            >
+                              Current Plan
+                            </button>
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="pricing-card">
+                            <p class="mt-2">PRO</p>
+                            <hr />
+                            <p><small>100 GB / year</small></p>
+                            <h3 class="mb-1 mt-4">$590</h3>
+                            <p class="mb-4"><small>Billed Annually</small></p>
+                            <button class="pricing-button">Upgrade</button>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end of pricing section -->
+
+                      <!-- data usage section -->
+                      <div class="row mt-4">
+                        <div class="col-lg-12 mb-2">
+                          <p class="mb-1"><small>Data Used</small></p>
+                          <h4>8.210 <span class="text-sm">GB</span></h4>
+                        </div>
+                        <div class="col-lg-12">
+                          <div class="row dot-progress">
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-blue"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-gray"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-gray"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-gray"></i>
+                            </div>
+                            <div class="col-1">
+                              <i class="fas fa-circle text-gray"></i>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-12 mt-4">
+                          <p class="mb-1"><small>Current Plan</small></p>
+                          <h4 class="text-blue text-white">
+                            10.000 <span class="text-sm">GB</span>
+                          </h4>
+                        </div>
+                      </div>
+                      <!-- end of pricing section -->
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      data-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of Modal for the storage plan -->
+
             <p class="mt-4 logout-text text-blue">
               <i class="fas fa-external-link-alt"></i> &nbsp;LOGOUT
             </p>
