add animation to the storage modal

--- a/dashboard.html
+++ b/dashboard.html
@@ -116,7 +116,12 @@
             >
 
             <!-- Modal for the storage plan -->
-            <div class="modal" tabindex="-1" role="dialog" id="storageModal">
+            <div
+              class="modal fade"
+              tabindex="-1"
+              role="dialog"
+              id="storageModal"
+            >
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
