make the storage plan modal wider

--- a/dashboard.html
+++ b/dashboard.html
@@ -122,7 +122,7 @@
               role="dialog"
               id="storageModal"
             >
-              <div class="modal-dialog" role="document">
+              <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title">Choose a Storage Plan</h5>
@@ -136,9 +136,9 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <div class="container-fluid text-center">
+                    <div class="container-fluid">
                       <!-- pricing section -->
-                      <div class="row">
+                      <div class="row text-center">
                         <div class="col-md-4">
                           <div class="pricing-card">
                             <p class="mt-2">STARTER</p>
@@ -178,12 +178,12 @@
 
                       <!-- data usage section -->
                       <div class="row mt-4">
-                        <div class="col-lg-12 mb-2">
+                        <div class="col-lg-3 col-md-2 col-mb">
                           <p class="mb-1"><small>Data Used</small></p>
-                          <h4>8.210 <span class="text-sm">GB</span></h4>
+                          <h3>8.210 <span class="text-sm">GB</span></h3>
                         </div>
-                        <div class="col-lg-12">
-                          <div class="row dot-progress">
+                        <div class="col-lg-6">
+                          <div class="row dot-progress mb-2">
                             <div class="col-1">
                               <i class="fas fa-circle text-blue"></i>
                             </div>
@@ -222,11 +222,11 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-lg-12 mt-4">
+                        <div class="col-lg-3 col-md-2 col-mb text-right">
                           <p class="mb-1"><small>Current Plan</small></p>
-                          <h4 class="text-blue text-white">
-                            10.000 <span class="text-sm">GB</span>
-                          </h4>
+                          <h3 class="text-blue">
+                            <span class="text-sm">GB</span> 10.000
+                          </h3>
                         </div>
                       </div>
                       <!-- end of pricing section -->
